# fast-api-scripture-app

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  deployment.md  docker-compose.yml  package-lock.json  prompts.md
.github/workflows/: backend-deploy.yml  ci.yml  deploy.yml  frontend-deploy.yml  synthetic-monitoring.yml
backend/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup_database.py
backend/app/: __init__.py  main.py
backend/app/models/: scripture.py
backend/app/routes/: scriptures.py
backend/app/services/: database.py
backend/app/utils/: config.py  environment.py
backend/tests/: __init__.py  test_api.py
docs/: README.md  api-standards.md  architecture.md  deployment.md  developer-guide.md  development-workflow.md  getting-started.md  makefiles.md  monitoring-setup.md  operations-guide.md  prompts.md  sre.md  submodules.md  testing-guide.md
docs/releases/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
docs/screenshots/: README.md
frontend/: .eslintrc.cjs  .eslintrc.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.js.backup  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: ChapterReader.tsx  Navigation.tsx  ScriptureReader.tsx
frontend/src/hooks/: useScriptures.ts
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: scripture.ts
scripts/: monitor.py
