[project]
name = "fast-scriptures-backend"
version = "1.0.0"
description = "FastAPI backend for LDS scripture reading application"
authors = [
    {name = "Fast Scriptures Team"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
]
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
] 
