[project]
name = "fast-scriptures-backend"
version = "1.3.0"
description = "FastAPI backend for LDS scripture reading application"
authors = [
    {name = "Fast Scriptures Team"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "newrelic>=10.15.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=5.0.4",
    "mypy>=1.14.1",
    "bandit>=1.7.10",
    "pre-commit>=3.5.0",
    "pytest-cov>=5.0.0",
]
requires-python = ">=3.9"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py39']

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
]
